--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "lightgallery.js": "^1.4.0",
     "smooth-scroll": "^16.1.3",
     "swiper": "^11.1.14"
   }
